<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

  <string name="appName">Editor</string>

  <string name="newFile">New file</string>
  <string name="openFile">Open file</string>
  <string name="name">Name</string>
  <string name="path">Path</string>
  <string name="create">Create</string>
  <string name="edit">Edit</string>
  <string name="view">View</string>
  <string name="open">Open file…</string>
  <string name="save">Save</string>
  <string name="storage">Storage</string>
  <string name="openRecent">Open recent</string>
  <string name="clearList">Clear list</string>
  <string name="search">Search…</string>
  <string name="findAll">Find all…</string>
  <string name="saveAs">Save as…</string>
  <string name="detect">Detect</string>
  <string name="goTo">Go to…</string>
  <string name="print">Print…</string>
  <string name="viewMarkdown">View markdown…</string>
  <string name="options">Options</string>
  <string name="viewFile">View files</string>
  <string name="openLast">Open last</string>
  <string name="autoSave">Auto save</string>
  <string name="wrap">Word wrap</string>
  <string name="suggest">Suggestions</string>
  <string name="highlight">Highlight syntax</string>
  <string name="theme">Theme</string>
  <string name="light">Light</string>
  <string name="dark">Dark</string>
  <string name="system">System</string>
  <string name="white">White</string>
  <string name="black">Black</string>
  <string name="retro">Retro</string>
  <string name="size">Text size</string>
  <string name="small">Small</string>
  <string name="medium">Medium</string>
  <string name="large">Large</string>
  <string name="typeface">Typeface</string>
  <string name="mono">Monospace</string>
  <string name="normal">Proportional</string>
  <string name="sans">Sans serif</string>
  <string name="serif">Serif</string>
  <string name="about">About</string>

  <!--
      Note for translators: You don't need to translate all these
      translation credits below. Just the version, copyright, credit
      for your translation and the licence. Also add your translation
      credit here.
  -->
  <string name="version" formatted="false"><a href="https://github.com/billthefarmer/editor/releases/latest">%s</a>\n\nBuilt %s\n\nCopyright \u00A9 2017 <a href="https://github.com/billthefarmer">Bill Farmer</a>\n\nArabic translation by <a href="https://github.com/MuhammedSaleem-Brej">MuhammedSaleem brej</a>,French translation by <a href="https://github.com/milouse">Étienne Deparis</a>, German translation by <a href="https://github.com/Markus00000">Markus Weimar</a> and <a href="https://github.com/AlexanderRitter02">Alexander Ritter</a>, Italian translation by <a href="https://github.com/airon90">Michael Moroni</a>, Polish translation by <a href="https://github.com/evo16">Evo</a>, Greek translation by <a href="https://github.com/nikoss">nikoss</a>, Spanish translation by <a href="https://github.com/foxneo">Miguel Caceres</a>, Simplified Chinese translation by <a href="https://github.com/ludoux">Lu Chang (ludoux)</a>, Dutch translation by <a href="https://github.com/Vistaus">Heimen Stoffels (vistaus)</a>, Russian translation by <a href="https://github.com/bboa">Igor Nedoboy</a>, Latvian translation by <a href="https://github.com/rhssk">Rihards Skuja</a>, Icelandic translation by <a href="">Sveinn í Felli</a>, Portuguese translation by <a href="https://github.com/Andre-Gloria" >André Glória</a>, Chinese (Taiwan) translation by <a href="https://github.com/cges30901">cges30901</a>, Turkish translation by <a href="https://github.com/yasarciv67">Yaşar Çiv</a>, Brazilian Portuguese translation by <a href="https://github.com/aevw">aevw</a>, Sorani Kurdish translation by <a href="https://github.com/rawandsaeed">Rawand Saeed</a>, Persian (Farsi) translation by <a href="https://github.com/eshagh79">Eshagh</a>, Hungarian translation by <a href="https://github.com/urbalazs">Balázs Úr</a>, Japanese translation by <a href="https://gitlab.com/dokutoku">dokutoku</a>, Belarusian translation by <a href="https://github.com/Atrafon">Makar Razin</a>, Basque (eu) translation by <a href="https://github.com/alexgabi">alexgabi</a>\n\nLicence <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

  <string name="tooLarge">Too large %s</string>
  <string name="choose">Choose a file name</string>
  <string name="loading">Loading…</string>

  <string name="modified">
    You have unsaved changes. Do you want to save your changes?
  </string>

  <string name="changedReload">
    This file has changed, do you want to reload it?
  </string>

  <string name="changedOverwrite">
    This file has changed, do you want to overwrite it?
  </string>

  <string name="manageFiles"><p>In order to have access to the <b>Documents</b> and other folders <b>Editor</b> must use the <b>Files</b> or <b>All files access</b> permission depending upon the version of Android. If this is not allowed the app may still be able to access files using the <b>Storage</b> button in the file chooser.</p></string>
  <string name="files">Files</string>
  <string name="access">Access all files</string>

  <string name="ok">OK</string>
  <string name="reload">Reload</string>
  <string name="overwrite">Overwrite</string>
  <string name="discard">Discard</string>
  <string name="cancel">Cancel</string>

</resources>
