<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
  <item
      android:id="@+id/open"
      android:showAsAction="ifRoom"
      android:title="@string/open"
      android:icon="@drawable/ic_action_collection" />
  <item
      android:id="@+id/save"
      android:showAsAction="ifRoom"
      android:title="@string/save"
      android:icon="@drawable/ic_action_save" />
  <item
      android:id="@+id/saveAs"
      android:showAsAction="never"
      android:title="@string/saveAs" />
  <item
      android:id="@+id/wrap"
      android:checkable="true"
      android:showAsAction="never"
      android:title="@string/wrap" />
  <item
      android:id="@+id/dark"
      android:checkable="true"
      android:showAsAction="never"
      android:title="@string/dark" />
  <item
      android:id="@+id/size"
      android:showAsAction="never"
      android:title="@string/size">
    <menu>
      <group
          android:checkableBehavior="single">
        <item
            android:id="@+id/small"
            android:showAsAction="never"
            android:title="@string/small" />
        <item
            android:id="@+id/medium"
            android:showAsAction="never"
            android:title="@string/medium" />
        <item
            android:id="@+id/large"
            android:showAsAction="never"
            android:title="@string/large" />
      </group>
    </menu>
  </item>
  <item
      android:id="@+id/typeface"
      android:showAsAction="never"
      android:title="@string/typeface">
    <menu>
      <group
          android:checkableBehavior="single">
        <item
            android:id="@+id/mono"
            android:showAsAction="never"
            android:title="@string/mono" />
        <item
            android:id="@+id/normal"
            android:showAsAction="never"
            android:title="@string/normal" />
      </group>
    </menu>
  </item>
</menu>
