<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    tools:ignore="Autofill">

  <EditText
      android:id="@+id/name"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/name"
      android:inputType="text" />

  <EditText
      android:id="@+id/path"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:hint="@string/path"
      android:inputType="text" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:orientation="horizontal"
      style="?android:attr/buttonBarStyle">

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/openFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openFile"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        style="?android:attr/buttonBarButtonStyle" />

  </LinearLayout>

</LinearLayout>
